--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,7 @@
     <title>Boiler App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <noscript>
